# lda-bump-cpp

./: .gitignore  CMakeLists.txt  README.md  docopt.cpp  driver.cpp  printtopics.py
docopt/: docopt_private.h  docopt_util.h  docopt_value.h
lda/: lda.hpp  lda_bumping.hpp  lda_coord_ascent.hpp  lda_svi.hpp
util/: corpus.hpp  util.hpp
